[tool.poetry]
name = "Math problem generator"
version = "0.0.1"
description = "generate math problem"
authors = ["Ethan"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
httpx = "^0.24.1"
mathgenerator = "^1.5.0"
sympy = [
     {version = "^1.12", platform = "linux", extras = ["mpmath"]},
     {version = "^1.12", platform = "win32", extras = ["mpmath"]},
     ]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"